<resources>
    <string name="app_name">Calculator</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="value_6">6</string>
    <string name="value_7">7</string>
    <string name="value_8">8</string>
    <string name="value_9">9</string>
    <string name="value_0">0</string>
    <string name="dot">.</string>
    <string name="C">C</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="enter">=</string>
    <string name="text_size">35sp</string>
    <string name="cleared">cleared</string>
    <string name="zero_division">деление на ноль</string>
    <string name="theme_one">theme one</string>
    <string name="theme_two">theme two</string>
    <string name="change_theme">Сменить тему</string>
    <string name="theme_example">ТЕМА</string>
</resources>