<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="400dp"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear"
        style="@style/Button.BigButton"
        android:text="@string/C"
        app:layout_constraintBottom_toTopOf="@id/btn_7"
        app:layout_constraintEnd_toEndOf="@id/btn_8"
        app:layout_constraintStart_toStartOf="@id/btn_7"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_0"
        style="@style/Button"
        android:text="@string/value_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@id/btn_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dot"
        style="@style/Button"
        android:layout_marginStart="@dimen/keyboard_key_margin"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="@id/btn_0"
        app:layout_constraintEnd_toStartOf="@id/btn_enter"
        app:layout_constraintStart_toEndOf="@id/btn_0"
        app:layout_constraintTop_toTopOf="@id/btn_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_1"
        style="@style/Button"
        android:text="@string/value_1"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        app:layout_constraintEnd_toStartOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_2"
        style="@style/Button"
        android:layout_marginStart="@dimen/keyboard_key_margin"
        android:text="@string/value_2"
        app:layout_constraintBottom_toBottomOf="@id/btn_1"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintStart_toEndOf="@id/btn_1"
        app:layout_constraintTop_toTopOf="@id/btn_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_3"
        style="@style/Button"
        android:layout_marginStart="@dimen/keyboard_key_margin"
        android:layout_marginEnd="@dimen/keyboard_key_margin"
        android:text="@string/value_3"
        app:layout_constraintBottom_toBottomOf="@id/btn_2"
        app:layout_constraintEnd_toStartOf="@id/btn_enter"
        app:layout_constraintStart_toEndOf="@id/btn_2"
        app:layout_constraintTop_toTopOf="@id/btn_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_4"
        style="@style/Button"
        android:text="@string/value_4"
        app:layout_constraintBottom_toTopOf="@id/btn_1"
        app:layout_constraintEnd_toEndOf="@id/btn_1"
        app:layout_constraintStart_toStartOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@id/btn_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_5"
        style="@style/Button"
        android:text="@string/value_5"
        app:layout_constraintBottom_toBottomOf="@id/btn_4"
        app:layout_constraintEnd_toEndOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="@id/btn_2"
        app:layout_constraintTop_toTopOf="@id/btn_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_6"
        style="@style/Button"
        android:text="@string/value_6"
        app:layout_constraintBottom_toBottomOf="@id/btn_5"
        app:layout_constraintEnd_toEndOf="@id/btn_3"
        app:layout_constraintStart_toStartOf="@id/btn_3"
        app:layout_constraintTop_toTopOf="@id/btn_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_7"
        style="@style/Button"
        android:text="@string/value_7"
        app:layout_constraintBottom_toTopOf="@id/btn_4"
        app:layout_constraintEnd_toEndOf="@id/btn_4"
        app:layout_constraintStart_toStartOf="@id/btn_4"
        app:layout_constraintTop_toBottomOf="@id/btn_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8"
        style="@style/Button"
        android:text="@string/value_8"
        app:layout_constraintBottom_toBottomOf="@id/btn_7"
        app:layout_constraintEnd_toEndOf="@id/btn_5"
        app:layout_constraintStart_toStartOf="@id/btn_5"
        app:layout_constraintTop_toTopOf="@id/btn_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_9"
        style="@style/Button"
        android:text="@string/value_9"
        app:layout_constraintBottom_toBottomOf="@id/btn_8"
        app:layout_constraintEnd_toEndOf="@id/btn_6"
        app:layout_constraintStart_toStartOf="@id/btn_6"
        app:layout_constraintTop_toTopOf="@id/btn_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        style="@style/Button.Arithmetic"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@id/btn_clear"
        app:layout_constraintEnd_toEndOf="@id/btn_9"
        app:layout_constraintStart_toStartOf="@id/btn_9"
        app:layout_constraintTop_toTopOf="@id/btn_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_minus"
        style="@style/Button.Arithmetic"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@id/btn_plus"
        app:layout_constraintEnd_toEndOf="@id/btn_multiply"
        app:layout_constraintStart_toStartOf="@id/btn_multiply"
        app:layout_constraintTop_toTopOf="@id/btn_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_division"
        style="@style/Button.Arithmetic"
        android:text="@string/division"
        app:layout_constraintBottom_toBottomOf="@id/btn_6"
        app:layout_constraintEnd_toEndOf="@id/btn_enter"
        app:layout_constraintStart_toStartOf="@id/btn_enter"
        app:layout_constraintTop_toTopOf="@id/btn_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_multiply"
        style="@style/Button.Arithmetic"
        android:text="@string/multiply"
        app:layout_constraintBottom_toBottomOf="@id/btn_9"
        app:layout_constraintEnd_toEndOf="@id/btn_division"
        app:layout_constraintStart_toStartOf="@id/btn_division"
        app:layout_constraintTop_toTopOf="@id/btn_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter"
        style="@style/Button.BigButton"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/keyboard_key_margin"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="@id/btn_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_dot"
        app:layout_constraintTop_toTopOf="@id/btn_3" />
</androidx.constraintlayout.widget.ConstraintLayout>